prevent zoom on mobile

--- a/main.css
+++ b/main.css
@@ -46,3 +46,13 @@ p {
     line-height: 1.6;
     margin: 1em auto;
 }
+
+
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="text"],
+select:focus,
+textarea {
+  font-size: 16px;
+}
