--- a/modal.css
+++ b/modal.css
@@ -35,7 +35,7 @@
     padding: 1em;
     position: relative;
     border-radius: 4px;
-    font-family: 'Roboto', 'sans-serif';
+    font-family: Arial, Helvetica, sans-serif;
     color: var(--darkBlue);
 }
 
